--- a/ManualInput.Tests/ManualInput.Tests.csproj
+++ b/ManualInput.Tests/ManualInput.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{B4866F43-969F-48D5-962F-32BE94DE3E40}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ManualInput.Tests</RootNamespace>
-    <AssemblyName>ManualInput.Tests</AssemblyName>
+    <RootNamespace>Tests</RootNamespace>
+    <AssemblyName>Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
