Changed Auth in mi and RoleAdmin. Updated packges

--- a/CTS_BusinessProcesses/App.config
+++ b/CTS_BusinessProcesses/App.config
@@ -3,7 +3,7 @@
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-		<section name="ctsSmtp" type="CTS_BusinessProcesses.SMTPConfigSection, CTS_BusinessProcesses" />
+		<section name="ctsSmtp" type="CTS_Core.SMTPConfigSection, CTS_Core" />
 	</configSections>
 	<connectionStrings>
 		<add name="LocalDBConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
@@ -21,4 +21,7 @@
 	<ctsSmtp>
 		<smtpServer host="smtp.mail.ru" port="25" timeout="30000" enablessl="true" login="julia-aniskina@mail.ru" password="" senderMail="julia-aniskina@mail.ru" senderName="Yuliya"></smtpServer>
 	</ctsSmtp>
+	<appSettings>
+		<add key="SkipActPath" value="C:\SkipData" />
+	</appSettings>
 </configuration>
