--- a/CTS_Analytics/NLog.config
+++ b/CTS_Analytics/NLog.config
@@ -4,35 +4,38 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-	  throwConfigExceptions="true"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
 
-	<variable name="mylayout" value="${longdate} ${logger} ${message}${exception:format=ToString}"/>
+  <!-- optional, add some variables
+  https://github.com/nlog/NLog/wiki/Configuration-file#variables
+  -->
+  <variable name="myvar" value="myvalue"/>
 
-	<targets >
-		<target name="ErrorFile" xsi:type="File"
-					layout="${mylayout}"
-					fileName="${basedir}/log/ErrorFile_${shortdate}.log"
-					keepFileOpen="true"
-					encoding="utf-8"
-			  />
-		<target name="TraceFile" xsi:type="File"
-				layout="${mylayout}"
-				fileName="${basedir}/log/TraceFile_${shortdate}.log"
-				keepFileOpen="true"
-				encoding="utf-8"
-			  />
-		<target name="DebugFile" xsi:type="File"
-				layout="${mylayout}"
-				fileName="${basedir}/log/DebugFile_${shortdate}.log"
-				keepFileOpen="true"
-				encoding="utf-8"
-			  />
-	</targets>
+  <!--
+  See https://github.com/nlog/nlog/wiki/Configuration-file
+  for information on customizing logging rules and outputs.
+   -->
+  <targets>
 
-	<rules>
-		<logger name="*" levels="Error" writeTo="ErrorFile" enabled="true"/>
-		<logger name="*" levels="Trace" writeTo="TraceFile" enabled="true"/>
-		<logger name="*" levels="Debug" writeTo="DebugFile" enabled="true"/>
-	</rules>
+    <!--
+    add your targets here
+    See https://github.com/nlog/NLog/wiki/Targets for possible targets.
+    See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
+    -->
+
+    <!--
+    Write events to a file with the date in the filename.
+    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${message}" />
+    -->
+  </targets>
+
+  <rules>
+    <!-- add your logging rules here -->
+
+    <!--
+    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
+    <logger name="*" minlevel="Debug" writeTo="f" />
+    -->
+  </rules>
 </nlog>
