--- a/CTS_Analytics/packages.config
+++ b/CTS_Analytics/packages.config
@@ -1,58 +1,61 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="bootstrap" version="4.1.3" targetFramework="net461" />
   <package id="bootstrap.daterangepicker" version="2.1.24.1" targetFramework="net461" />
-  <package id="bootstrap.less" version="3.3.5" targetFramework="net461" />
+  <package id="bootstrap.less" version="3.3.7" targetFramework="net461" />
   <package id="Bootstrap.Multiselect" version="0.9.13" targetFramework="net461" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net461" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net461" />
   <package id="bootstrap-sortable" version="2.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
-  <package id="jQuery" version="3.2.1" targetFramework="net461" />
+  <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Cookie" version="1.4.1" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
-  <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.SignalR" version="2.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.3" targetFramework="net461" />
+  <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights" version="2.8.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.8.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.8.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.8.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.8.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.8.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net461" />
-  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Cors" version="2.0.2" targetFramework="net461" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Cors" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Moment.js" version="2.22.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
-  <package id="NLog" version="4.5.6" targetFramework="net461" />
-  <package id="NLog.Config" version="4.5.6" targetFramework="net461" />
-  <package id="NLog.Schema" version="4.5.6" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="NLog" version="4.5.11" targetFramework="net461" />
+  <package id="NLog.Config" version="4.5.11" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.5.11" targetFramework="net461" />
   <package id="normalize.css" version="3.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
-  <package id="Respond" version="1.2.0" targetFramework="net461" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net461" />
+  <package id="popper.js" version="1.14.3" targetFramework="net461" />
+  <package id="Respond" version="1.4.2" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net461" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
