Alarm prio to web.config

--- a/CTS_Analytics/Web.config
+++ b/CTS_Analytics/Web.config
@@ -20,6 +20,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="RepotrsFolderPath" value="C:\Reports\Static" />
+    <add key="CoalWarningPrio" value="350" />
+    <add key="CoalAlarmPrio" value="450" />
 	<add key="DRip" value="192.168.0.68" />
   </appSettings>
   <system.web>
