--- a/CTS_RoleAdmin/Web.config
+++ b/CTS_RoleAdmin/Web.config
@@ -18,9 +18,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	  
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-    <authentication mode="Windows" />
+	  <authentication mode="Windows" />
+	  <identity impersonate="true" />
     <authorization>
       <deny users="?" />
     </authorization>
