Alarm fix + locale fix

--- a/CTS_Analytics/Web.config
+++ b/CTS_Analytics/Web.config
@@ -20,8 +20,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="RepotrsFolderPath" value="C:\Reports\Static" />
-    <add key="CoalWarningPrio" value="350" />
-    <add key="CoalAlarmPrio" value="450" />
+    <add key="CoalWarningPrioLimit" value="500" />
+    <add key="CoalAlarmPrioLimit" value="750" />
 	<add key="DRip" value="192.168.0.68" />
   </appSettings>
   <system.web>
@@ -38,6 +38,7 @@
     <customErrors mode="On">
       <error redirect="error" statusCode="404" />
     </customErrors>
+  <globalization culture="ru" uiCulture="ru" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
