--- a/CTS_BusinessProcesses/CTS_Core.csproj
+++ b/CTS_BusinessProcesses/CTS_Core.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.6\lib\net45\System.Web.Helpers.dll</HintPath>
@@ -72,6 +73,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CtsAuthorizeProvider.cs" />
+    <Compile Include="Cacher.cs" />
     <Compile Include="CtsAuthorizeAttribute.cs" />
     <Compile Include="ProjectConstants.cs" />
     <Compile Include="Roles.cs" />
