Finished with dividing services

--- a/DBSyncServiceTest/App.config
+++ b/DBSyncServiceTest/App.config
@@ -6,7 +6,7 @@
 		<section name="serviceParameters" type="DBSyncServiceTest.MyConfigSection, DBSyncServiceTest" />
 	</configSections>
 	<connectionStrings>
-		<add name="CentralDBConnection" connectionString="Data Source=192.168.0.70\SQLEXPRESS;Initial Catalog=CoalTrackingNew;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
+		<add name="CentralDBConnection" connectionString="Data Source=192.168.0.70\SQLEXPRESS;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
 		<add name="kuz" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
 		<add name="kost" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
 		<add name="WagonDB" connectionString="data source=192.168.0.70\SQLEXPRESS;Initial catalog=WagonDB;persist security info=True;user id=sa;password=aaa-111;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
