RoleAdmin Basic functionality

--- a/CTS_Models/App.config
+++ b/CTS_Models/App.config
@@ -6,7 +6,7 @@
     
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 	<connectionStrings>
-		<add name="CentralDbConnection" connectionString="Data Source=192.168.0.70\SQLEXPRESS;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
+		<add name="CentralDbConnection" connectionString="Data Source=192.168.0.70\SQLEXPRESS;Initial Catalog=CoalTrackingNew;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
 		<add name="WagonDB" connectionString="data source=192.168.0.70\SQLEXPRESS;initial catalog=WagonDB;persist security info=True;user id=sa;password=aaa-111;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
