--- a/CTS_Analytics/Web.config
+++ b/CTS_Analytics/Web.config
@@ -23,6 +23,7 @@
     <add key="CoalWarningPrioLimit" value="500" />
     <add key="CoalAlarmPrioLimit" value="750" />
 	<add key="DRip" value="192.168.0.68" />
+    <add key="SkipActPath" value="C:\SkipData"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
