--- a/CTS_RoleAdmin/Web.config
+++ b/CTS_RoleAdmin/Web.config
@@ -16,6 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DomainNames" value="Europe, Aapac, Americas, Msco, Services" />
   </appSettings>
   <system.web>
 	  
