--- a/CTS_RoleAdmin/Web.config
+++ b/CTS_RoleAdmin/Web.config
@@ -17,6 +17,21 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DomainNames" value="Europe, Aapac, Americas, Msco, Services" />
+    <add key="CTS_Analytics" value="Весь сайт аналитики" />
+    <add key="CTS_RoleAdmin" value="Сайт управления ролями" />
+    <add key="CTSmi_AddUser" value="Добавление новых записей ручного ввода" />
+    <add key="CTSmi_ApproveUser" value="Подтверждение записей ручного ввода" />
+    <add key="CTSmi_Belt" value="Конвейерные весы ручного ввода" />
+      <add key="CTSmi_DeleteUser" value="Удаление записей ручного воода" />
+      <add key="CTSmi_Dict" value="Доступ к приложению аналитики" />
+      <add key="CTSmi_EditUser" value="Изменение записей ручного ввода" />
+    <add key="CTSmi_Lab" value="Лабораторный данные ручного ввода" />
+    <add key="CTSmi_Rock" value="Утилизация породы ручного ввода" />
+    <add key="CTSmi_Skip" value="Данные скипов ручного ввода" />
+    <add key="CTSmi_Vehicle" value="Данные автомобильных весов ручного ввода" />
+    <add key="CTSmi_Wagon" value="Данные вагонных весов ручного ввода" />
+    <add key="CTSmi_Warehouse" value="Данные складов ручного ввода" />
+    <add key="CTSmi_WarehouseSet" value="Доступ к приложению аналитики" />
   </appSettings>
   <system.web>
 	  
