еще дебаг роль админа

--- a/CTS_Analytics/Web.Release.config
+++ b/CTS_Analytics/Web.Release.config
@@ -34,10 +34,10 @@
   </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
-    <authorization xdt:Transform="Replace">
+    <!--<authorization xdt:Transform="Replace">
       <allow roles="CTSAnalytics" />
       <deny users="*"/>
-    </authorization>
+    </authorization>-->
     <!--
       In the example below, the "Replace" transform will replace the entire
       <customErrors> section of your Web.config file.
