--- a/CTS_RoleAdmin/Web.config
+++ b/CTS_RoleAdmin/Web.config
@@ -8,9 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-	<connectionStrings>
-		<add name="CentralDbConnection" connectionString="Data Source=192.168.0.70\SQLEXPRESS;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <connectionStrings>
+    <add name="CentralDbConnection" connectionString="Data Source=192.168.0.70\SQLEXPRESS;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -33,13 +33,29 @@
     <add key="CTSmi_Warehouse" value="Данные складов ручного ввода" />
     <add key="CTSmi_WarehouseSet" value="Данные складов ручного ввода" />
     <add key="ANL_dashboards" value="Дашборды аналитики" />
+
+    <add key="REP_OverallProduction" value="Отчет по добыче УД" />
+    <add key="REP_AdvancedOverallMineProduction" value="Расширеный отчет по шахте" />
+    <add key="REP_OverallMineProduction" value="Сводный отчет по шахте" />
+    <add key="REP_OperCoalProductionReport" value="Оперативная сводка по добыче угля" />
+    <add key="REP_AlarmReport" value="Отчет по алармам" />
+    <add key="REP_CoalProductionByMine" value="Отчет по добыче угля по шахтам за месяц" />
+    <add key="REP_StockpilesMonth" value="Отчет по остаткам УД" />
+    <add key="REP_WagonScalesReport" value="Отчет по вагонным весам" />
+    <add key="REP_GlobalSafety" value="Сводный отчет по безопасности" />
+    <add key="REP_SkipReport" value="Отчет по скипам" />
+    <add key="REP_SiteSafety" value="Отчет по безопасности по объекту" />
+    <add key="REP_BeltScalesReport" value="Отчет по конвейерным весам" />
+    <add key="REP_ComparisonInfoMiningsReport" value="Сравнение данных по добыче опер.учет и CTS" />
+    <add key="REP_QualityControlReport" value="Отчет контроль качества" />
+    <add key="REP_DynamicReports" value="Динамические отчеты" />
   </appSettings>
   <system.web>
-	  
+
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-	  <authentication mode="Windows" />
-	  <identity impersonate="true" />
+    <authentication mode="Windows" />
+    <identity impersonate="true" />
     <authorization>
       <deny users="?" />
     </authorization>
