dbsync cofv + syncdepth

--- a/DBSyncService/DBSyncService/DBSyncService/App.config
+++ b/DBSyncService/DBSyncService/DBSyncService/App.config
@@ -12,6 +12,9 @@
 		<add name="kost" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CoalTracking;Persist Security Info=True;User ID=sa;Password=aaa-111" providerName="System.Data.SqlClient" />
 		<add name="WagonDB" connectionString="data source=192.168.0.70\SQLEXPRESS;initial catalog=WagonDB;persist security info=True;user id=sa;password=aaa-111;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
+  <appSettings>
+    <add key="WagonDBSyncDepth_Days" value="14" />
+  </appSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
 	</startup>
